--- a/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
+++ b/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
@@ -8689,156 +8689,310 @@
         }
       }
     },
-    "gachaKit.poolType.srCollabWarpFateUBWCharacter" : {
+    "gachaKit.poolType.srCollabWarpFateUBW21" : {
       "extractionState" : "manual",
       "localizations" : {
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Kollaborations-Charakter-Warp"
+            "value" : "Kollaborations-Warp #21"
           }
         },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Collab. Character Warp"
+            "value" : "Collab. Warp #21"
           }
         },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Warp de Colaboración de Personaje"
+            "value" : "Warp de Colaboración #21"
           }
         },
         "fil" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Collaboration Character Warp"
+            "value" : "Collaboration Warp #21"
           }
         },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Warp de collaboration personnage"
+            "value" : "Warp de collaboration #21"
           }
         },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Varco Collaborazione Personaggio"
+            "value" : "Varco Collaborazione #21"
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "コラボキャラ跳躍"
+            "value" : "コラボ跳躍 #21"
           }
         },
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "콜라보 캐릭터 워프"
+            "value" : "콜라보 워프 #21"
           }
         },
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Коллаборационный варп персонажа"
+            "value" : "Коллаборационный варп #21"
           }
         },
         "vi" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Warp hợp tác nhân vật"
+            "value" : "Warp hợp tác #21"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "联动角色跃迁"
+            "value" : "联动跃迁 #21"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "聯動角色躍遷"
+            "value" : "聯動躍遷 #21"
           }
         }
       }
     },
-    "gachaKit.poolType.srCollabWarpFateUBWLightCone" : {
+    "gachaKit.poolType.srCollabWarpFateUBW22" : {
       "extractionState" : "manual",
       "localizations" : {
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Kollaborations-Lichtkegel-Warp"
+            "value" : "Kollaborations-Warp #22"
           }
         },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Collab. Light Cone Warp"
+            "value" : "Collab. Warp #22"
           }
         },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Warp de Cono de Luz de Colaboración"
+            "value" : "Warp de Colaboración #22"
           }
         },
         "fil" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Collaboration Light Cone Warp"
+            "value" : "Collaboration Warp #22"
           }
         },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Warp de cône de lumière collaboration"
+            "value" : "Warp de collaboration #22"
           }
         },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Varco Collaborazione Cono di Luce"
+            "value" : "Varco Collaborazione #22"
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "コラボ光円錐跳躍"
+            "value" : "コラボ跳躍 #22"
           }
         },
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "콜라보 광추 워프"
+            "value" : "콜라보 워프 #22"
           }
         },
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Коллаборационный варп светового конуса"
+            "value" : "Коллаборационный варп #22"
           }
         },
         "vi" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Warp Nón Ánh Sáng Hợp Tác"
+            "value" : "Warp hợp tác #22"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "联动光锥跃迁"
+            "value" : "联动跃迁 #22"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "聯動光錐躍遷"
+            "value" : "聯動躍遷 #22"
+          }
+        }
+      }
+    },
+    "gachaKit.poolType.srCollabWarpFateUBW23" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kollaborations-Warp #23"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Collab. Warp #23"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Warp de Colaboración #23"
+          }
+        },
+        "fil" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Collaboration Warp #23"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Warp de collaboration #23"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Varco Collaborazione #23"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "コラボ跳躍 #23"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "콜라보 워프 #23"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Коллаборационный варп #23"
+          }
+        },
+        "vi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Warp hợp tác #23"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "联动跃迁 #23"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "聯動躍遷 #23"
+          }
+        }
+      }
+    },
+    "gachaKit.poolType.srCollabWarpFateUBW24" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kollaborations-Warp #24"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Collab. Warp #24"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Warp de Colaboración #24"
+          }
+        },
+        "fil" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Collaboration Warp #24"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Warp de collaboration #24"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Varco Collaborazione #24"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "コラボ跳躍 #24"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "콜라보 워프 #24"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Коллаборационный варп #24"
+          }
+        },
+        "vi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Warp hợp tác #24"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "联动跃迁 #24"
+          }
+        },
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "聯動躍遷 #24"
           }
         }
       }
