i18n // Optimizing Japanese localization.

--- a/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
+++ b/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
@@ -1659,7 +1659,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "旧ピザ難民資料をお持ちした場合、UIGFv4 フォーマットを選択してください。アプリは自動的にガチャ記録の itemID を修正し、UIGFv4 フォーマットに変換してインポートします。この処理は自動で行われます。"
+            "value" : "旧ピザ難民資料をお持ちした場合、UIGFv4 フォーマットを選択してください。アプリは自動的にガチャ記録の itemID を修正し、UIGFv4 フォーマットに変換して読み込みます。この処理は自動で行われます。"
           }
         },
         "ko" : {
